--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Just do it</title>
+    <link rel="stylesheet" href="./Style/index.css">
     <style> 
     table,tr,td,th {
         border: 1px solid black;
+        padding: 20px 50px;
         border-collapse: collapse;
     }
 
@@ -16,24 +18,22 @@
 <body>
     <header>
         <div id="logo">
-            <img src="/assets/Do it logo.png" alt="Do it logo"  style="border-radius: 50%;" >
+            <img src="/assets/Do it logo.png" alt="Do it logo" >
         </div>
         <div>
-            <h1 style="font-family: cursive;font-style: italic;font-size: 200%;" >Just!! Do it!!</p>
+            <h1 id="Just-Do-it" >Just!! Do it!!</p>
         </div>
-        <nav>
-            <ul>
-                <li><a href="#">Today</a></li>
-                <li>Next 7-Days</li>
-                <li>This Month</li>
-                <li>Year Goals</li>
-                <li><a href="/about.html">About</a></li>
-            </ul>
+        <nav class="header-nav">
+            <a href="#">Today</a>
+            <a href="">Next 7-Days</a>
+            <a href="">This Month</a>
+            <a href="">Year Goals</a>
+            <a href="/about.html">About</a>
         </nav>
     </header>
     <main>
         <section>
-            <table align="center">
+            <table class="tasks-table">
                 <tr>
                     <th>Tasks</th>
                     <th>Status</th>
@@ -43,8 +43,8 @@
                     <td>
                         <label for="done">Done?</label>
                         <select name="done" >
-                            <option value="Not Yet">Not Yet</option>
-                            <option value="Done">Done</option>
+                            <option value="Not Yet" style="background-color: red;">Not Yet</option>
+                            <option value="Done" style="background-color: green;" >Done</option>
                         </select><br>
                         <input type="checkbox" class="did it" name="Option1" value="did it">
                         <label for="Option1">Did it</label><br>
@@ -61,8 +61,8 @@
                     <td>
                         <label for="done">Done?</label>
                         <select name="done" >
-                            <option value="Not Yet">Not Yet</option>
-                            <option value="Done">Done</option>
+                            <option value="Not Yet" style="background-color: red;">Not Yet</option>
+                            <option value="Done" style="background-color: green;" >Done</option>
                         </select><br>
                         <input type="checkbox" class="did it" name="Option1" value="did it">
                         <label for="Option1">Did it</label><br>
@@ -78,8 +78,8 @@
                     <td>
                         <label for="done">Done?</label>
                         <select name="done" >
-                            <option value="Not Yet">Not Yet</option>
-                            <option value="Done">Done</option>
+                            <option value="Not Yet" style="background-color: red;">Not Yet</option>
+                            <option value="Done" style="background-color: green;" >Done</option>
                         </select><br>
                         <input type="checkbox" class="did it" name="Option1" value="did it">
                         <label for="Option1">Did it</label><br>
@@ -94,7 +94,7 @@
         </section>
 
     </main>
-    <footer style="background-color: rgb(191, 241, 235) ;">
+    <footer>
         <div>
             <h3 style="font-family: cursive;font-style: italic;font-size: 200%;text-align: center ;" >Do it now... Don't be lazy!!</h3>
         </div>
