--- a/index.html
+++ b/index.html
@@ -100,5 +100,6 @@
         </div>
           <p style="font-size: 150%;text-align: center;">® MyFutureCompany</p>
     </footer>
+    <script src="./JS/app.js"></script>
 </body>
 </html>
